fix: Inhaltsverzeichnis gap bei .abseits nur oben

--- a/css/inhaltsverzeichnis.css
+++ b/css/inhaltsverzeichnis.css
@@ -73,6 +73,6 @@
 	text-decoration: none;
 }
 
-#inhaltsverzeichnis li.abseits {
-	--gap: 3.6rem;
+#inhaltsverzeichnis li.abseits a {
+	padding-top: 2rem;
 }
